fix(maps): fix overflow again

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -18,3 +18,7 @@ html::-webkit-scrollbar-thumb {
 html::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+body {
+  background-color: rgb(24, 24, 27);
+}
